plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.0'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'org.example'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	// MONGO
	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'

	// REDIS
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'

	// POSTGRE
	runtimeOnly 'org.postgresql:postgresql'


	// SECURITY
	implementation 'org.springframework.boot:spring-boot-starter-security'

	// LOMBOK
	annotationProcessor 'org.projectlombok:lombok'
	compileOnly 'org.projectlombok:lombok'

	// JPA
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

	// VALIDATION
	implementation 'org.springframework.boot:spring-boot-starter-validation'

	// SPRING BOOT
	implementation 'org.springframework.boot:spring-boot-starter-web'

	// TEST
	// H2 데이터베이스 의존성
	testImplementation 'com.h2database:h2'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	testImplementation 'org.mockito:mockito-core:5.2.0'


	// JWT
	implementation 'io.jsonwebtoken:jjwt:0.12.6'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'

	//.env
	implementation 'me.paulschwarz:spring-dotenv:4.0.0'

	// MINIO
	implementation 'io.minio:minio:8.5.12'

	// ELASTIC SEARCH
	implementation 'org.springframework.boot:spring-boot-starter-data-elasticsearch'
}

tasks.named('test') {
	useJUnitPlatform()
}
